# smit

./: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  check.py  docker-compose.yml  exa.json  main.py  prometheus.yml  pyproject.toml  requirements_dev.txt  setup.cfg
.github/workflows/: ci-cd.yaml
app/: applications.py  bootstrap.py  settings.py
app/kafka/: producer.py
app/models/: action_type.py  rate.py  tariff.py
app/orm_models/: __init__.py  date_accession.py  rate.py  rate_date.py  tariff.py  uuid_mixin.py
app/repositories/: rate_repository.py  tariff_repository.py
app/routers/: default_router.py  example_descriptions.py  rate_router.py  tariff_router.py
app/services/: rate_service.py  tariff_service.py
app/settings/: base.conf
app/utils/: db.py  logger_config.py
docker/: app.sh
migrations/: env.py
migrations/versions/: 2024_11_30_2220-b6d5b84296f4_init.py  2024_12_01_0041-a61d06dc8eb0_init.py
tests/: conftest.py  utils.py
tests/mocked_data/: tariff.json
tests/models/: tariffs.py
tests/routers/: conftest.py  test_fefault_router.py
tests/services/: test_tariffs.py
