[tool.poetry]
name = "smit"
version = "0.1.0"
description = ""
authors = ["Nik <erofeev.nik.it@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
ruff = "^0.8.1"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pydantic = "^2.10.2"
alembic = "^1.14.0"
sqlalchemy = "2.0.23"
asyncpg = "^0.30.0"
pyhocon = "^0.3.61"
greenlet = "^3.1.1"
punq = "^0.7.0"
orjson = "^3.10.12"
python-multipart = "^0.0.18"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
