[tool.poetry]
name = "smit"
version = "0.1.0"
description = ""
authors = ["Nik <erofeev.nik.it@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.8.1"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pydantic = "^2.10.2"
alembic = "^1.14.0"
sqlalchemy = "2.0.23"
asyncpg = "^0.30.0"
pyhocon = "^0.3.61"
greenlet = "^3.1.1"
punq = "^0.7.0"
orjson = "^3.10.12"
python-multipart = "^0.0.18"
pre-commit = "^4.0.1"
loguru = "^0.7.2"
isort = "^5.13.2"
kafka = "^1.3.5"
aiokafka = "^0.12.0"
mypy = "^1.13.0"
sentry-sdk = "^2.19.2"
notifiers = "^1.3.3"
setuptools = "^75.6.0"
starlette-prometheus = "^0.10.0"
pydantic-settings = "^2.6.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true
exclude = '''
\\.git|__pycache__
|\\.yml\\.enc
|\\*/migrations/\\*
|grafana-dashboard\\.json
|\\*/docker/\\*
|prometheus\\.yml
|venv
|env
'''

[tool.ruff]
line-length = 88

[tool.flake8]
exclude = '''
.git,
__pycache__,
.yml.enc,
*/migrations/*,
grafana-dashboard.json,
*/docker/*,
prometheus.yml,
venv,
env,
'''

[tool.isort]
profile = 'black'
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
skip = ['.git',
    '__pycache__',
    '*.yml.enc',
    'migrations/',
    'grafana-dashboard.json',
    'grafana-dashboard.json',
    '*/docker/*',
    'prometheus.yml',
    '*/venv/*',
    '*/env/*',
]


[tool.mypy]
strict = false
ignore_missing_imports = true


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
